# BUILD PYTHON MODULES
FIND_PACKAGE(SWIG)

IF(SWIG_FOUND)
  
  INCLUDE(UseSWIG)

  FIND_PACKAGE(PythonLibs 2.7)

  MESSAGE(STATUS "Python Library Version: ${PYTHONLIBS_VERSION_STRING}")

  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

  INCLUDE_DIRECTORIES(
    "${CMAKE_SOURCE_DIR}/src"
    "${CMAKE_SOURCE_DIR}/src/actions/"
    "${CMAKE_SOURCE_DIR}/src/models/"
    "${CMAKE_SOURCE_DIR}/src/data/"
    "${CMAKE_SOURCE_DIR}/src/tools/")

  SET(CMAKE_SWIG_FLAGS "-Wall")

  SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/py)

  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/py)

  SET_SOURCE_FILES_PROPERTIES(${UQ_SRC_I_NA} PROPERTIES CPLUSPLUS ON)
  SET_SOURCE_FILES_PROPERTIES(${UQ_SRC_I_NAS} PROPERTIES CPLUSPLUS ON)
  SET_SOURCE_FILES_PROPERTIES(${UQ_SRC_I_CORONARY} PROPERTIES CPLUSPLUS ON)

  SWIG_ADD_MODULE(LPN_NormalAdult python ${UQ_SRC_I_NA})
  SWIG_ADD_MODULE(LPN_NASimple python ${UQ_SRC_I_NAS})
  SWIG_ADD_MODULE(LPN_Coronary python ${UQ_SRC_I_CORONARY})
  
  SWIG_LINK_LIBRARIES(LPN_NormalAdult gCodeLib ${PYTHON_LIBRARIES})
  SWIG_LINK_LIBRARIES(LPN_NASimple gCodeLib ${PYTHON_LIBRARIES})
  SWIG_LINK_LIBRARIES(LPN_Coronary gCodeLib ${PYTHON_LIBRARIES})

  # COPY ALL PYTHON FILES TO THE PY FOLDER
  file(GLOB pyFiles "${CMAKE_SOURCE_DIR}/py/*.*")
  file(COPY ${pyFiles} DESTINATION ${CMAKE_BINARY_DIR}/py/)
  # COPY SCRIPTS IN SCRIPT FOLDER
  file(GLOB scriptFiles "${CMAKE_SOURCE_DIR}/scripts/*.*")
  file(COPY ${scriptFiles} DESTINATION ${CMAKE_BINARY_DIR}/scripts/)
  
ENDIF()
