# CREATE A STATIC LIBRARY TO BE USED BY ALL EXEs
ADD_LIBRARY(tulip STATIC ${UQ_SRC_C})

# CREATE A STATIC LIBRARY FOR EXPRTK
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src/tools/thirdParty)
ADD_LIBRARY(exprtk STATIC ${CMAKE_SOURCE_DIR}/src/tools/thirdParty/exprtk.h)
SET_TARGET_PROPERTIES(exprtk PROPERTIES LINKER_LANGUAGE CXX)
