PROJECT(SimulLaunchApp)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)

AUX_SOURCE_DIRECTORY(. SRC_LIST)

INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

ADD_DEFINITIONS("-g -Wall -m64 -O0 -std=c++0x")

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_LIST})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})


