# This is a CMake example for Python

#CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#if(UNIX)
#  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
#endif()

#FIND_PACKAGE(SWIG REQUIRED)
#INCLUDE(${SWIG_USE_FILE})

#FIND_PACKAGE(PythonLibs)
#INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

#SET(CMAKE_SWIG_FLAGS "")

#SET_SOURCE_FILES_PROPERTIES(uqCore.i PROPERTIES CPLUSPLUS ON)
# SET_SOURCE_FILES_PROPERTIES(uqCore.i PROPERTIES SWIG_FLAGS "-includeall")

#SWIG_ADD_MODULE(uqcore python uqCore.i)
#SWIG_LINK_LIBRARIES(uqcore ${PYTHON_LIBRARIES})